--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ button:focus {
     outline: none !important;
 }
 
+a {
+    transition: all .3s ease-in-out !important;
+}
+
+a:hover {
+    color: rgba(255, 255, 255, 0.827) !important;
+}
+
 .bg-blue {
     background-color: #1b339f !important;
     color: #fff !important;
@@ -18,9 +26,12 @@ button:focus {
 }
 
 .navbar-brand {
-    font-family: 'Ranade', sans-serif;
-    font-weight: 600;
-    font-size: 25px;
+    font-family: 'Author', sans-serif;
+    font-weight: 500;
+    font-size: 28px;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
@@ -33,29 +44,97 @@ button:focus {
     width: fit-content;
 }
 
-.nav-link, .dropdown-item{
+.nav-link {
+    width: fit-content !important;
+    transition: border .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+}
+
+.nav-link,
+.dropdown-item {
     font-family: 'Author', sans-serif;
     text-transform: uppercase;
-    font-weight: 600;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 18px;
     letter-spacing: 1px;
     width: 100%;
 }
 
-.nav-link::after {
-    content: '';
-    width: 0 !important;
-    display: block !important;
-    height: 1px !important;
-    color: #fff !important;
-    transition: width .3s !important;
+/* .dropdown-menu {
+    transition: height .3s;
+} */
+
+.dropdown-item:hover {
+    background-color: rgb(220, 220, 220);
+    color: #000 !important;
+}
+
+.dropdown-item:focus {
+    background-color: rgb(201, 201, 201);
+}
+
+.nav-link:hover {
+    border-bottom: 1px solid #fff;
 }
 
 .nav-link:hover::after {
     width: 100%;
 }
 
+i {
+    transition: all .25s ease-in-out;
+}
 
+i:hover {
+    color: rgba(255, 255, 255, 0.801) !important;
+}
+
+.animate {
+    animation-duration: 0.3s;
+    -webkit-animation-duration: 0.3s;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+}
+
+
+@keyframes slideIn {
+    0% {
+        transform: translateY(1rem);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(3rem);
+        opacity: 1;
+    }
+
+    0% {
+        transform: translateY(1rem);
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes slideIn {
+    0% {
+        -webkit-transform: transform;
+        -webkit-opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        -webkit-opacity: 1;
+    }
+
+    0% {
+        -webkit-transform: translateY(1rem);
+        -webkit-opacity: 0;
+    }
+}
+
+.slideIn {
+    -webkit-animation-name: slideIn;
+    animation-name: slideIn;
+}
 
 .homepage-gallery {
     padding: 2rem 1.25rem;
