--- a/css/style.css
+++ b/css/style.css
@@ -295,3 +295,154 @@ i:hover {
         font-family: 'Author', sans-serif;
     }   
 }
+
+
+.contact-section {
+    padding: 4rem 7rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.contact-left {
+    max-width: 50%;
+}
+
+.contact-left img {
+    width: 100%;
+}
+
+.contact-right {
+    display: flex;
+    flex-direction: column;   
+    margin-left: 5rem;
+}
+
+.contact-right h3 {
+    font-size: 45px;
+    font-weight: 500;
+    font-family: 'Author', sans-serif;
+}
+
+.contact-right h5 {
+    font-size: 15px;
+    font-weight: 300;
+    margin-top: 1rem;
+    font-family: 'Ranade', sans-serif;
+}
+
+.contact-right form {
+    margin-top: 2rem;
+}
+
+.contact-right input {
+    border-radius: 0 !important;
+    box-shadow: none !important;
+    padding: 0.75rem 0.75rem;
+    border: 0.5px solid rgb(131, 131, 131);
+}
+
+.contact-right textarea {
+    border-radius: 0 !important;
+    box-shadow: none !important;
+    border: 0.5px solid rgb(132, 132, 132);
+}
+
+.contact-right label {
+    font-size: 16px;
+    margin-top: 0.5rem;
+}
+
+.contact-right button {
+    background-color: transparent;
+    color: #000;
+    padding: 1.25rem 2.25rem;
+    border: 1px solid;
+    border-radius: 0;
+}
+
+.contact-right button:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+
+@media (max-width: 992px) {
+    .contact-section {
+        padding: 2rem 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
+    .contact-left {
+        max-width: 100%;
+    }
+    
+    .contact-left img {
+        width: 100%;
+    }
+    
+    .contact-right {
+        display: flex;
+        flex-direction: column;   
+        margin-left: 0;
+    }
+    
+    .contact-right h3 {
+        font-size: 35px;
+        font-weight: 500;
+        margin-top: 2rem;
+    }
+    
+    .contact-right h5 {
+        font-size: 16px;
+        font-weight: 400;
+        margin-top: 1rem;
+    }
+    
+    .contact-right form {
+        margin-top: 0rem;
+    }
+}
+
+
+@media (max-width:768px) {
+    
+    .contact-left {
+        max-width: 100%;
+    }
+    
+    .contact-left img {
+        width: 100%;
+    }
+    
+    .contact-right {
+        display: flex;
+        flex-direction: column;   
+        margin-left: 0;
+    }
+    
+    .contact-right h3 {
+        font-size: 35px;
+        font-weight: 500;
+        margin-top: 2rem;
+    }
+    
+    .contact-right h5 {
+        font-size: 16px;
+        font-weight: 400;
+        margin-top: 1rem;
+    }
+    
+    .contact-right form {
+        margin-top: 0rem;
+    }
+
+    .contact-right button {
+        background-color: transparent;
+        color: #000;
+        padding: 1rem 1.5rem;
+        border: 1px solid;
+        border-radius: 0;
+    }
+}
