--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ i:hover {
     transition: all .35s ease-in-out;
 }
 
-.hovereffect:hover .img-card{
+.hovereffect:hover .img-card {
     filter: brightness(60%);
 }
 
@@ -270,7 +270,7 @@ i:hover {
 }
 
 
-.collection-section > div > div {
+.collection-section>div>div {
     height: 100% !important;
 }
 
@@ -284,7 +284,7 @@ i:hover {
     letter-spacing: 1px;
     margin-bottom: 0 !important;
     font-family: 'Author', sans-serif;
-    
+
 }
 
 @media (max-width: 576px) {
@@ -293,7 +293,7 @@ i:hover {
         letter-spacing: 1px;
         margin-bottom: 0 !important;
         font-family: 'Author', sans-serif;
-    }   
+    }
 }
 
 
@@ -313,7 +313,7 @@ i:hover {
 
 .contact-right {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     margin-left: 5rem;
 }
 
@@ -358,6 +358,11 @@ i:hover {
     padding: 1.25rem 2.25rem;
     border: 1px solid;
     border-radius: 0;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: 'Author', sans-serif;
+    letter-spacing: 1px;
 }
 
 .contact-right button:hover {
@@ -373,33 +378,27 @@ i:hover {
         flex-direction: column;
         justify-content: space-around;
     }
-    
+
     .contact-left {
         max-width: 100%;
     }
-    
+
     .contact-left img {
         width: 100%;
     }
-    
+
     .contact-right {
         display: flex;
-        flex-direction: column;   
+        flex-direction: column;
         margin-left: 0;
     }
-    
+
     .contact-right h3 {
         font-size: 35px;
         font-weight: 500;
         margin-top: 2rem;
     }
-    
-    .contact-right h5 {
-        font-size: 16px;
-        font-weight: 400;
-        margin-top: 1rem;
-    }
-    
+
     .contact-right form {
         margin-top: 0rem;
     }
@@ -407,33 +406,31 @@ i:hover {
 
 
 @media (max-width:768px) {
-    
+
+    .contact-section {
+        padding: 2rem 3rem;
+    }
+
     .contact-left {
         max-width: 100%;
     }
-    
+
     .contact-left img {
         width: 100%;
     }
-    
+
     .contact-right {
         display: flex;
-        flex-direction: column;   
+        flex-direction: column;
         margin-left: 0;
     }
-    
+
     .contact-right h3 {
         font-size: 35px;
         font-weight: 500;
         margin-top: 2rem;
     }
-    
-    .contact-right h5 {
-        font-size: 16px;
-        font-weight: 400;
-        margin-top: 1rem;
-    }
-    
+
     .contact-right form {
         margin-top: 0rem;
     }
@@ -444,5 +441,12 @@ i:hover {
         padding: 1rem 1.5rem;
         border: 1px solid;
         border-radius: 0;
+    }
+}
+
+
+@media (max-width: 576px) {
+    .contact-section {
+        padding: 2rem 1.5rem;
     }
 }
