--- a/css/style.css
+++ b/css/style.css
@@ -450,3 +450,107 @@ i:hover {
         padding: 2rem 1.5rem;
     }
 }
+
+
+/* About Page */
+.about-img-wrapper {
+    height: 500px;
+}
+
+.about-jumbotron-img {
+    width: 100%;
+    height: 100%;
+}
+
+.about-jumbotron-img img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    filter: brightness(95%);
+    object-position: center;
+}
+
+.jumbotron-img-head {
+    top: 75%;
+    width: 100%;
+    text-align: center;
+}
+
+.jumbotron-img-head h3 {
+    font-size: calc(8rem + .2vw);
+    font-family: 'Author', sans-serif;
+    letter-spacing: 1px;
+    color: #fff;
+    z-index: 1050;
+}
+
+@media (max-width: 768px) {
+    .jumbotron-img-head {
+        top: 69%;
+    }
+
+    .jumbotron-img-head h3 {
+        font-size: 20vw;
+    }
+}
+
+@media (max-width: 576px) {
+    .jumbotron-img-head {
+        top: 79%;
+    }
+
+    .jumbotron-img-head h3 {
+        font-size: 22vw;
+    }
+}
+
+.about-head-z-1 {
+    z-index: 1050 !important;
+}
+
+.about-body h3 {
+    font-family: 'Author', sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-bottom: 1.5rem;
+}
+
+.about-body h5 {
+    font-family: 'Author', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
+}
+
+@media (max-width: 576px) {
+    .about-body h5 {
+        font-size: 17px;
+        line-height: 1.2;
+    }
+}
+
+.about-body button {
+    background-color: transparent;
+    color: #000;
+    padding: 1.25rem 2.25rem;
+    border: 1px solid;
+    border-radius: 0;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: 'Author', sans-serif;
+    letter-spacing: 1px;
+    width: fit-content;
+}
+
+@media (max-width: 576px) {
+    .about-body button {
+        padding: 1rem 1.25rem;
+    }
+}
+
+.about-body button:hover {
+    background-color: #000;
+    color: #fff;
+}
